# 42-Ft_printf

./: CMakeLists.txt  Makefile  README.md
includes/: ft_printf.h
libft/includes/: get_next_line.h  libft.h  libft.h.gch
libft/srcs/check/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnegative.c  ft_isprint.c  ft_isspace.c
libft/srcs/gnl/: get_next_line.c
libft/srcs/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/srcs/other/: ft_iterative_power.c  lltoa.c
libft/srcs/put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrlen.c
libft/srcs/stdlib/: ft_atoc.c  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_atoul.c  ft_itoa.c  ft_itoa_base.c  ft_lltoa.c  ft_lltoa_base.c  ft_lltoanomalloc.c  ft_ltoa.c  ft_ltoa_base.c  ft_stoa.c  ft_ulltoa_base.c
libft/srcs/str/: ft_charcat.c  ft_chardup.c  ft_chardup_spec.c  ft_split_whitespaces.c  ft_split_whitespaces_spec.c  ft_sstrdup.c  ft_sstrlen.c  ft_sstrnew.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcountoccur.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strdupfree.c  ft_strequ.c  ft_strindexchr.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoinfree.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strlowcase.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  (+11 more)
srcs/: main.c
srcs/core/: ft_core.c  ft_flags.c  ft_modifier.c  ft_precision.c  ft_printf.c
srcs/lst/: ft_free_lst.c  ft_init_lst.c
(+2 files in other folders)
